--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/styled-components": "^4.1.11",
     "@types/styled-system": "^4.1.0",
     "@types/yup": "^0.26.13",
+    "gatsby-plugin-root-import": "^2.0.5",
     "prettier": "^1.17.0"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
