--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "gatsby-plugin-root-import": "^2.0.5",
     "prettier": "^1.17.0"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://blog.c1495616.xyz",
   "keywords": [
     "gatsby"
   ],
